library_management_system/library_management_system/src/main/java/com/example/library_management_system/Error/exceptions/BookAlreadeBorrowedExcepotion.java
package com.example.library_management_system.Error.exceptions;

public class BookAlreadeBorrowedExcepotion extends RuntimeException{

    public BookAlreadeBorrowedExcepotion() {}

public BookAlreadeBorrowedExcepotion(String message) {
        super(message);
    }

}
